<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:autofillHints="no"
        android:hint="@string/search_for_photos"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/polling_switch_label"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/polling_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/search_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_view" />

    <TextView
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:id="@+id/polling_switch_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:labelFor="@+id/polling_switch"
        android:text="@string/polling_label"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/search_view"
        app:layout_constraintRight_toLeftOf="@id/polling_switch"
        app:layout_constraintTop_toTopOf="@id/search_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_history_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_search_history"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@android:color/transparent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="8dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="Close search history"
            android:textAlignment="textStart"
            android:textColor="@color/light_gray"
            android:textSize="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/close_search_history">

            <LinearLayout
                android:id="@+id/search_history_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gallery_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_search_history"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@android:color/transparent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="8dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/show_search_history"
            android:textAlignment="textStart"
            android:textColor="@color/light_gray"
            android:textSize="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/top_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/photo_grid" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_search_history" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/bottom_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/photo_grid" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="20dp"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/error_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_error_message"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_button_text"
            android:textAllCaps="true"
            app:icon="@drawable/ic_retry"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>